Concurrent Mini Java Compiler/src/Parse/Parse.java
/* Generated By:JavaCC: Do not edit this line. Parse.java */
    package Parse;
    import java.util.LinkedList;
    import java.util.List;
    import Absyn.*;

        public class Parse implements ParseConstants {

/* Grammar */
  static final public Program Program() throws ParseException {
    ClassDecl cd;
    LinkedList<ClassDecl> classDeclarations = new LinkedList<ClassDecl>();
    cd = MainClassDeclaration();
                                  classDeclarations.add(cd);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = SubClassDecl();
                                                                                       classDeclarations.add(cd);
    }
    jj_consume_token(0);
            {if (true) return new Program(classDeclarations);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl MainClassDeclaration() throws ParseException {
        Token name;
        LinkedList<VarDecl> fields = new LinkedList<VarDecl>();
        LinkedList<Stmt> stmts = new LinkedList<Stmt>();
        LinkedList<MethodDecl> m = new LinkedList<MethodDecl>();
        LinkedList<Formal> args = new LinkedList<Formal>();
        VarDecl v;
        Stmt s;

    LinkedList<VarDecl> noFieldsForMainMethod = new LinkedList<VarDecl>();

        Token arg;
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(40);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(41);
    jj_consume_token(STRING_RESERVED_WORD);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 42:
      jj_consume_token(42);
      break;
    case 43:
      jj_consume_token(43);
      jj_consume_token(44);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    arg = jj_consume_token(ID);
    jj_consume_token(45);
    jj_consume_token(40);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      v = VarDeclaration();
                                                                                                                                                                fields.add(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case XINU:
      case ID:
      case 40:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      s = Statement();
                                                                                                                                                                                                      stmts.add(s);
    }
    jj_consume_token(46);
    jj_consume_token(46);
                args.add(new Formal(new ArrayType(new IdentifierType("String")), arg.image));
                            m.add(new MethodDecl(null, false, "main", args, fields, stmts, new IntegerLiteral(0) ));
                            {if (true) return new ClassDecl(noFieldsForMainMethod, m, name.image, "null");}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl SubClassDecl() throws ParseException {
        Token name;
        String parent;
        LinkedList<VarDecl> varDeclarations = new LinkedList<VarDecl>();
        VarDecl v;
        LinkedList<MethodDecl> methodDeclarations = new LinkedList<MethodDecl>();
        MethodDecl m;
    jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    parent = ExtendStm();
    jj_consume_token(40);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case PUBLIC:
      case ID:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case ID:
        v = FieldDeclaration();
                                                                            varDeclarations.add(v);
                                                                                                       v = FieldDeclaration(); varDeclarations.add(v);
        break;
      case PUBLIC:
        m = MethodDeclaration();
                                                                                                                                                                                   methodDeclarations.add(m);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(46);
    if(parent.equals("Thread"))
                {if (true) return new ThreadDecl(name.image, varDeclarations,methodDeclarations);}
        else
                {if (true) return new ClassDecl(varDeclarations, methodDeclarations, name.image, parent);}
    throw new Error("Missing return statement in function");
  }

  static final public String ExtendStm() throws ParseException {
        String className = "null";
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      className = ClassName();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
          {if (true) return className;}
    throw new Error("Missing return statement in function");
  }

  static final public String ClassName() throws ParseException {
        Token className;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THREAD:
      jj_consume_token(THREAD);
               {if (true) return "Thread";}
      break;
    case ID:
      className = jj_consume_token(ID);
                       {if (true) return className.image;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl FieldDeclaration() throws ParseException {
        Type t;
        Token id;
    t = Type();
    id = jj_consume_token(ID);
    jj_consume_token(47);
                              {if (true) return new VarDecl(t, id.image, null);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDeclaration() throws ParseException {
        Type t;
        Token id;
        Expr e = null;
    t = Type();
    id = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 48:
      e = VarDecEnd();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(47);
                                           {if (true) return new VarDecl(t, id.image, e);}
    throw new Error("Missing return statement in function");
  }

  static final public Expr VarDecEnd() throws ParseException {
        Expr e = null;
    jj_consume_token(48);
    e = Expression();
                             {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
        MethodDecl m;
    jj_consume_token(PUBLIC);
    m = MethodPrime();
                                {if (true) return m;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodPrime() throws ParseException {
        Type returnType;
        Token name;
        boolean synced = false;
        LinkedList<Formal> params = new LinkedList<Formal>();
        LinkedList<VarDecl> locals = new LinkedList<VarDecl>();
        LinkedList<Stmt> stmts = new LinkedList<Stmt>();
        Expr returnVal = null;

        Type temp;
        Token VarTemp;
        VarDecl v;
        Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INT:
    case ID:
      returnType = Type();
      name = jj_consume_token(ID);
      jj_consume_token(41);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYNCHRONIZED:
        jj_consume_token(SYNCHRONIZED);
                                                          synced = true;
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INT:
      case ID:
        temp = Type();
        VarTemp = jj_consume_token(ID);
                                                                                                           params.add(new Formal(temp, VarTemp.image));
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 49:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(49);
          temp = Type();
          VarTemp = jj_consume_token(ID);
                                                                                                                                                                                             params.add(new Formal(temp, VarTemp.image));
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(45);
      jj_consume_token(40);
      label_6:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_6;
        }
        v = VarDeclaration();
                                                                                                                                                                                                                                                                                             locals.add(v);
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case XINU:
        case ID:
        case 40:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_7;
        }
        s = Statement();
                                                                                                                                                                                                                                                                                                                                    stmts.add(s);
      }
      jj_consume_token(RETURN);
      returnVal = Expression();
      jj_consume_token(47);
      jj_consume_token(46);
                 {if (true) return new MethodDecl(returnType, synced, name.image, params, locals, stmts, returnVal);}
      break;
    case VOID:
      jj_consume_token(VOID);
      name = jj_consume_token(ID);
      jj_consume_token(41);
      jj_consume_token(45);
      jj_consume_token(40);
      label_8:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_8;
        }
        v = VarDeclaration();
                                                                        locals.add(v);
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case XINU:
        case ID:
        case 40:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_9;
        }
        s = Statement();
                                                                                                               stmts.add(s);
      }
      jj_consume_token(46);
                                                                                                                                       {if (true) return new VoidDecl(name.image, locals, stmts);}
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Stmt Statement() throws ParseException {
        LinkedList<Stmt> stmts = new LinkedList<Stmt>();
        Stmt s1;
        Stmt s2 = null;
        Expr e1;
    Expr e2;
    AssignableExpr ae;
        XinuCallStmt x;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 40:
      jj_consume_token(40);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case XINU:
        case ID:
        case 40:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_10;
        }
        s1 = Statement();
                            stmts.add(s1);
      }
      jj_consume_token(46);
        /*if (stmts.isEmpty())
            return null;
        else*/
            {if (true) return new BlockStmt(stmts);}
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(41);
      e1 = Expression();
      jj_consume_token(45);
      s1 = Statement();
      if (jj_2_4(2)) {
        jj_consume_token(ELSE);
        s2 = Statement();
      } else {
        ;
      }
                                                                                                  {if (true) return new IfStmt(e1,s1,s2);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(41);
      e1 = Expression();
      jj_consume_token(45);
      s1 = Statement();
                                                        {if (true) return new WhileStmt(e1,s1);}
      break;
    case ID:
      ae = AssignExpression();
      jj_consume_token(48);
      e2 = StatementPrime();
      jj_consume_token(47);
                                                           {if (true) return new AssignStmt(ae, e2);}
      break;
    case XINU:
      x = XinuStatement();
      jj_consume_token(47);
                             {if (true) return x;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expr StatementPrime() throws ParseException {
        Expr e;
        XinuCallExpr x1;
        XinuCallStmt x2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case NUM:
    case FALSE:
    case NEW:
    case NULL:
    case THIS:
    case TRUE:
    case ID:
    case STRING:
    case 41:
    case 57:
      e = Expression();
                      {if (true) return e;}
      break;
    case XINU:
      x2 = XinuStatement();
                          {if (true) return new XinuCallExpr(x2.method, x2.args);}
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public XinuCallStmt XinuStatement() throws ParseException {
    Token method;
    LinkedList<Expr> args = new LinkedList<Expr>();
    /*List expressionList = new LinkedList();*/
    Expr e;
    jj_consume_token(XINU);
    jj_consume_token(50);
    method = jj_consume_token(ID);
    jj_consume_token(41);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case NUM:
    case FALSE:
    case NEW:
    case NULL:
    case THIS:
    case TRUE:
    case ID:
    case STRING:
    case 41:
    case 57:
      e = Expression();
                                                      args.add(e);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 49:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_11;
        }
        jj_consume_token(49);
        e = Expression();
                                                                                              args.add(e);
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(45);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 48:
      XinuStatementPrime();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
          {if (true) return new XinuCallStmt(method.image, args);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignableExpr AssignExpression() throws ParseException {
    Token e1;
    Token F = null;
    AssignableExpr e2 = null;
    AssignableExpr e3 = null;
    /*e1 = <ID> {e2 = new IdentifierExpr(e1.image);} ( e3 = ArrayE1(e2) )? [e3 = AssignExpression1(e2)] {if(e3 == null) return e2;
    												       else return e3;}*/
    
        e1 = jj_consume_token(ID);
               e2 = new IdentifierExpr(e1.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 43:
      e3 = ArrayE1(e2);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
                                                                          if(e3 == null) {if (true) return e2;} else {if (true) return e3;}
    throw new Error("Missing return statement in function");
  }

/*AssignableExpr AssignExpression1(Expr in) :
{
	Token t;
	Expr e;
}
{
    "." t = <ID> {return new FieldExpr(in, t.image);}
}*/
  static final public Expr XinuStatementPrime() throws ParseException {
        Expr e;
    jj_consume_token(48);
    e = Expression();
                           {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Expr Expression() throws ParseException {
        Expr e1;
        Expr e2;
    e1 = NewE();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      e1 = Expression1(e1);
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
                                              {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

/*Expr ParenExp() :
{
	Expr e;
}
{
	"(" e = Expression() ")" [e = AnotherNonTerm(e)] {return e;}
}

Expr AnotherNonTerm(Expr e1) :
{
	Expr e2 = null;
}
{

